--- a/codingclub/assets/css/shared/_variables.scss
+++ b/codingclub/assets/css/shared/_variables.scss
@@ -5,6 +5,8 @@ $light-grey: #9a9fb3;
 $lightest-grey: #efefef;
 $white: #ffffff;
 $blue: #0074d9;
+$lime: #00ff00;
+$dark-green: #006600;
 
 $pinkish-red: #ee1846;
 
