add edit button and change (hack!) colours

--- a/codingclub/assets/css/shared/_variables.scss
+++ b/codingclub/assets/css/shared/_variables.scss
@@ -8,7 +8,7 @@ $blue: #0074d9;
 $lime: #00ff00;
 $dark-green: #006600;
 
-$pinkish-red: #ee1846;
+$pinkish-red: #0074d9;
 
 $txt-32: 32px;
 $txt-26: 26px;
